--- a/Prueba.html
+++ b/Prueba.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 <link rel="StyleSheet" href="Prueba.css" type="text/css" media="screen" />
-    <title>Document</title>
+    <title>Mi Primera Pagina</title>
 </head>
 <body>
     <h1 class="titulo">Bienvenidos a mi Pagina </h1>
@@ -18,4 +18,20 @@
     <h4>Soy un titulo H4</h4>
     <h5>Soy un titulo H5</h5>
 </body>
-</html>
+<body>
+
+    <h2>Bienvenidos a mi pagina </h2>
+    
+    <p>La única vez que deberías mirar atrás es para ver lo mucho que has avanzado.</p>
+    
+    </body>
+    </html>
+<style>
+    body {
+        background-image: url('https://st.depositphotos.com/64905624/60868/i/450/depositphotos_608683068-stock-photo-seamless-80s-holographic-pink-blue.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        </html>
+
+  
