--- a/Prueba.html
+++ b/Prueba.html
@@ -21,7 +21,7 @@
             <li><a href="https://www.change.org/p/stop-testeo-argentina-aprueben-una-ley-para-prohibir-el-testeo-en-animales-sergiomassa-maxiferraro-leonardo-grosso-cristianritondo-schiavonih-luisnaidenoff" target="_blank">Firma</a></li>
         </ul>
     </nav>
-    <a href="" class="boton"><button>Registrate</button></a>
+    <a href="/registrate.html" class="boton"><button>Registrate</button></a>
 
 
 </header>
