--- a/Prueba.html
+++ b/Prueba.html
@@ -78,13 +78,16 @@
     </body>
     <aside class="video"> 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xdqB7X_ExWA" title="Save Ralph" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
         <style>
-            body {
-               background-image: url('https://st.depositphotos.com/64905624/60868/i/450/depositphotos_608683068-stock-photo-seamless-80s-holographic-pink-blue.jpg');
-               background-repeat: no-repeat;
-               background-attachment: fixed;
-               background-size: cover;
-        </style>  
+             body{
+                background-image: url('https://st.depositphotos.com/64905624/60868/i/450/depositphotos_608683068-stock-photo-seamless-80s-holographic-pink-blue.jpg');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+                
+        </body>
+    </html> 
 
     </body>
    </html>
