--- a/Prueba.html
+++ b/Prueba.html
@@ -30,7 +30,7 @@
             <li><a href="https://www.change.org/p/stop-testeo-argentina-aprueben-una-ley-para-prohibir-el-testeo-en-animales-sergiomassa-maxiferraro-leonardo-grosso-cristianritondo-schiavonih-luisnaidenoff" target="_blank">Firma</a></li>
         </ul>
     </nav>
-    <a href="/registrate.html" class="boton"><button>Registrate</button></a>
+    <a href="/registrate.html" target="_blank" class="boton"><button>Registrate</button></a>
 
 
 </header>
@@ -81,12 +81,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et.</p>
     </div>
 </div>
-
+<br>
+<aside class="video">
+<iframe width="900" height="500" src="https://www.youtube.com/embed/xdqB7X_ExWA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </aside>
+  <br> 
 <br> 
-<br>   
-    </body>
-    <aside class="video"> 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/xdqB7X_ExWA" title="Save Ralph" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
+      </body>
     </body>
    </html>
