--- a/Prueba.html
+++ b/Prueba.html
@@ -52,23 +52,26 @@
         <div class="sobre-mi">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam aperiam facere.
                 Aut provident voluptatum impedit magnam perspiciatis soluta reprehenderit
-                in incidunt sunt! Ex molestiae at est, mollitia perspiciatis perferendis.</p>
+                in incidunt sunt! Ex molestiae at est, mollitia perspiciatis perferendis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum tempora officia iusto tenetur magnam error eveniet possimus corrupti inventore odit non facere facilis omnis saepe, maxime accusamus repudiandae deleniti?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, obcaecati ducimus! Minus, non. A accusantium suscipit iusto velit qui dolor est culpa itaque, corrupti, harum illo excepturi accusamus enim molestias?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta veritatis eum excepturi corporis, pariatur qui minima, accusamus facere dolore, est libero quo omnis animi hic aspernatur ab sit. A, amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero ex ipsam aut expedita excepturi unde quam consequatur natus ducimus, similique dolor officiis voluptatem sint quisquam cum laborum veniam modi. Deleniti?</p>
             </main>
 <br>
 <br>
 <body>
     <h2>Algunas marcas que no testean en animales</h2>
 <br>
-<section class="contenedor-columnas">
+<div class="container">
     <div class="columnasx4">
         <img src="imagenes/dove-logo.png" alt="Dove" />
         <h3>Lorem, ipsum.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident saepe dolorum repudiandae pariatur voluptates totam nemo doloribus aspernatur! Doloremque obcaecati impedit perferendis illum iusto beatae accusamus animi eveniet eum! Repellat.Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et. </p>
     </div>
     <div class="columnasx4">
         <img src="imagenes/Garnier-logo.png" alt="Garnier" />
         <h3>Lorem, ipsum.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi provident nam exercitationem architecto placeat qui, cum quis officiis excepturi? Facilis, earum est assumenda voluptates provident reprehenderit saepe iste. Enim.</p>
     </div>
     <div class="columnasx4">
         <img src="imagenes/lidherma-logo.jpg" alt="Lidherma" />
@@ -78,13 +81,15 @@
     <div class="columnasx4">
         <img src="imagenes/logo-natura.jpeg" alt="Natura" />
         <h3>Lorem, ipsum.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur laudantium repudiandae distinctio tenetur dignissimos modi alias quo tempora autem mollitia.
+        </p>
     </div>
 </div>
 <br>
+<br>
 <aside class="video">
 <iframe width="900" height="500" src="https://www.youtube.com/embed/xdqB7X_ExWA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </aside>
+</aside>
   <br> 
 <br> 
       </body>
