--- a/Prueba.html
+++ b/Prueba.html
@@ -65,22 +65,22 @@
 <div class="container">
     <div class="columnasx4">
         <img src="imagenes/dove-logo.png" alt="Dove" />
-        <h3>Lorem, ipsum.</h3>
+        <h3>Dove</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident saepe dolorum repudiandae pariatur voluptates totam nemo doloribus aspernatur! Doloremque obcaecati impedit perferendis illum iusto beatae accusamus animi eveniet eum! Repellat.Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et. </p>
     </div>
     <div class="columnasx4">
         <img src="imagenes/Garnier-logo.png" alt="Garnier" />
-        <h3>Lorem, ipsum.</h3>
+        <h3>Garnier</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque modi provident nam exercitationem architecto placeat qui, cum quis officiis excepturi? Facilis, earum est assumenda voluptates provident reprehenderit saepe iste. Enim.</p>
     </div>
     <div class="columnasx4">
         <img src="imagenes/lidherma-logo.jpg" alt="Lidherma" />
-        <h3>Lorem, ipsum.</h3>
+        <h3>Lidherma</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel iusto voluptatibus at sapiente laudantium illum culpa ab eligendi eaque et.</p>
     </div>
     <div class="columnasx4">
         <img src="imagenes/logo-natura.jpeg" alt="Natura" />
-        <h3>Lorem, ipsum.</h3>
+        <h3>Natura</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur laudantium repudiandae distinctio tenetur dignissimos modi alias quo tempora autem mollitia.
         </p>
     </div>
