--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
-<link rel="StyleSheet" href="Prueba.css" type="text/css" media="screen" />
+<link rel="StyleSheet" href="style.css" type="text/css" media="screen" />
     <title>Mi Primera Pagina</title>
     <style>
         body{
